Lien vers les log users

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>YnHelp</title>
 </head>
 <body>
-<h1>Test</h1>
+    <a href="/YnHelp/public/views/authusers.html">Incription</a>
 </body>
 </html>
